--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <h2>I am a Web Developer</h2>
 <hr />
 
+<h3><a href="./public/movie-ranking.html">Movie-Ranking Project</h3></a> 
 <img src="./assets/images/movie-ranking.png" height="200" alt="My Top Movies"> <br/>
+<h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
 <img src="./assets/images/Birthdayakku.png" height="200" alt="Birthday">
 <hr />
 <a href="./public/about.html">About Me</a><a href="./public/contact.html">Contact Me</a>
